--- a/services/arena-ui/src/styles/_arena.scss
+++ b/services/arena-ui/src/styles/_arena.scss
@@ -1,6 +1,20 @@
+@import 'constants';
+
 .page-arena {
-    input {
-        height: 100px;
-        outline: none;
+    .arena-container {
+        $width: 60vw;
+
+        width: 60vw;
+        height: 30px;
+        margin-left: (100vw - $width) / 2;
+        .input {
+            @at-root #{&}--arena {
+                width: 100%;
+                outline: none;
+                font-size: 24px;
+            }
+        }
+
+        
     }
 }
