Change incorrect input handling. Add reducer tests.

--- a/services/arena-ui/src/styles/_arena.scss
+++ b/services/arena-ui/src/styles/_arena.scss
@@ -31,6 +31,10 @@
                 width: 100%;
                 outline: none;
                 font-size: 24px;
+
+                @at-root #{&}__danger {
+                    background-color: #ff000070;
+                }
             }
         }
     }
