--- a/services/arena-ui/src/styles/_arena.scss
+++ b/services/arena-ui/src/styles/_arena.scss
@@ -37,5 +37,14 @@
                 }
             }
         }
+
+        .timer {
+            @at-root #{&}--arena {
+
+                @at-root #{&}__success {
+                    color: green;
+                }
+            }
+        }
     }
 }
